Fixed JAR signature issue by excluding signature files in shade plugin and updated file I/O methods for Java 8 compatibility.